docs/v4.0.0/_sources/gallery/extras/photodiode.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/photodiode.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_photodiode.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_photodiode.py:


Photodiode Detector
===================

This example demonstrates the initialization and visualization of a Photodiode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-26

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.detector import Photodiode
    from PyMieSim.single import SystemPlotter

    detector = Photodiode(
        NA=0.3 * ureg.AU,  # Numerical Aperture
        cache_NA=0.2 * ureg.AU,
        sampling=500 * ureg.AU,  # Number of sampling points
        gamma_offset=0 * ureg.degree,  # Gamma offset in degrees
        phi_offset=0 * ureg.degree,  # Phi offset in degrees
    )

    plotter = SystemPlotter()

    plotter.plot(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_photodiode_001.png
   :alt: photodiode
   :srcset: /gallery/extras/images/sphx_glr_photodiode_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyvista.plotting.plotter.Plotter object at 0x7ff628284550>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.271 seconds)


.. _sphx_glr_download_gallery_extras_photodiode.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: photodiode.ipynb <photodiode.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: photodiode.py <photodiode.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: photodiode.zip <photodiode.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
